# nase_app_tauri

./: .gitignore  old_dt.tsx  package-lock.json  package.json  test_nase.db
docs/: database_diagram.md  nase_db_diagram.md  nase_db_diagram.mmd
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  test_nase.db
src-tauri/capabilities/: default.json
src-tauri/migration/: Cargo.toml
src-tauri/migration/src/: lib.rs  m20250523_021119_create_table_jornalero.rs  m20250526_000230_create_table_temporada.rs  m20250526_001159_create_table_cuadrilla.rs  m20250526_001923_create_table_jornalero.rs  m20250526_002315_create_table_produccion.rs  m20250526_002615_create_table_lider_cuadrilla.rs  m20250528_075840_create_table_cliente.rs  m20250528_080117_create_table_tipo_uva.rs  m20250528_080238_create_table_tipo_empaque.rs  m20250528_080408_create_table_variedad.rs  m20250528_080500_update_table_produccion.rs  m20250530_203152_recreate_cuadrilla_fk.rs  m20250601_000000_seed_complete_data.rs
src-tauri/src/: lib.rs  main.rs
src-tauri/src/controllers/: cliente_controller.rs  cuadrilla_controller.rs  jornaleros_controller.rs  mod.rs  produccion_controller.rs  temporada_controller.rs  tipo_empaque_controller.rs  tipo_uva_controller.rs  variedad_controller.rs
src-tauri/src/entities/: cliente.rs  cuadrilla.rs  jornalero.rs  mod.rs  prelude.rs  produccion.rs  temporada.rs  tipo_empaque.rs  tipo_uva.rs  variedad.rs
src-tauri/src/templates/: oauth_error.html  oauth_success.html
src/api/: cliente_api.ts  cuadrilla_api.ts  jornalero_api.ts  produccion_api.ts  temporada_api.ts  (+3 more)
(+84 files in other folders)
