[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.5.0", features = [] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["full"] }
sea-orm = { version = "1.1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
once_cell = "1.18.0"
rust_decimal = "1.37.1"
dotenv = "0.15"  

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
